--- a/EasyBooks/Base.lproj/Main.storyboard
+++ b/EasyBooks/Base.lproj/Main.storyboard
@@ -13,6 +13,7 @@
             <objects>
                 <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="aZY-so-Tla" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="7uv-Zk-Jim"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SVA-Xn-MiK">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -116,6 +117,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="vLX-xq-4Jn" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="6Tx-AZ-5rS"/>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" id="9F2-eu-I6X"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Gcg-h3-mtm">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -127,7 +129,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B17-V1-VFQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1984" y="-605"/>
+            <point key="canvasLocation" x="1717" y="-684"/>
         </scene>
         <!--Transactions-->
         <scene sceneID="lOH-cQ-sov">
