--- a/EasyBooks/Views/Bunny/BunnyAdditonViewController.xib
+++ b/EasyBooks/Views/Bunny/BunnyAdditonViewController.xib
@@ -39,7 +39,7 @@
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
-                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1N5-3I-rC4">
+                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter the name..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1N5-3I-rC4">
                                     <rect key="frame" x="10" y="28.5" width="334" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits" enablesReturnKeyAutomatically="YES"/>
@@ -77,7 +77,7 @@
                 </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="1" green="0.94457133309999997" blue="0.78749142969999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="ShT-PD-3Xu" firstAttribute="top" secondItem="GJJ-6I-Kkx" secondAttribute="bottom" constant="171.5" id="1dq-mU-WyR"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="ShT-PD-3Xu" secondAttribute="bottom" constant="232" id="A1F-ES-umC"/>
