--- a/EasyBooks/Views/CurrencyUnit/CurrencyUnitViewController.xib
+++ b/EasyBooks/Views/CurrencyUnit/CurrencyUnitViewController.xib
@@ -25,7 +25,7 @@
                 </tableView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="1" green="0.94457133309999997" blue="0.78749142969999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="DC1-W9-MUy" secondAttribute="trailing" constant="20" id="A1E-sd-yOr"/>
                 <constraint firstItem="DC1-W9-MUy" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Ev1-4x-fW4"/>
