--- a/EasyBooks/Views/Event/EventAdditionViewController.xib
+++ b/EasyBooks/Views/Event/EventAdditionViewController.xib
@@ -197,7 +197,7 @@
                 </label>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="1" green="0.94457133309999997" blue="0.78749142969999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="quM-oG-e4r" firstAttribute="bottom" secondItem="fnl-2z-Ty3" secondAttribute="bottom" id="1T9-33-Ahs"/>
                 <constraint firstItem="bLK-xy-hSi" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="4Z7-jd-vpB"/>
