--- a/EasyBooks/Views/Event/EventAmountSplitterViewController.xib
+++ b/EasyBooks/Views/Event/EventAmountSplitterViewController.xib
@@ -67,7 +67,7 @@
                 </textView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="1" green="0.94457133309999997" blue="0.78749142969999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="Ofn-dI-TGb" secondAttribute="trailing" constant="20" id="5ac-3T-kUj"/>
                 <constraint firstItem="O6o-rH-7Si" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="AyE-FV-sPV"/>
