--- a/EasyBooks/Views/HomeTab/HomeTab.storyboard
+++ b/EasyBooks/Views/HomeTab/HomeTab.storyboard
@@ -52,7 +52,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <viewLayoutGuide key="safeArea" id="s2c-n6-nrg"/>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <color key="backgroundColor" red="1" green="0.94457133309999997" blue="0.78749142969999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     </view>
                     <navigationItem key="navigationItem" id="JAl-pu-hWg"/>
                 </viewController>
