--- a/EasyBooks/Views/Tag/TagViewController.xib
+++ b/EasyBooks/Views/Tag/TagViewController.xib
@@ -47,7 +47,7 @@
                 </button>
             </subviews>
             <viewLayoutGuide key="safeArea" id="fnl-2z-Ty3"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" red="1" green="0.94457133309999997" blue="0.78749142969999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
             <constraints>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="XiL-Gn-ZB3" secondAttribute="trailing" constant="20" id="RKL-Yv-U2I"/>
                 <constraint firstAttribute="bottom" secondItem="FHb-nU-wJP" secondAttribute="bottom" constant="50" id="RcU-b6-IS5"/>
